--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --clr-primary-100: #6f737f;
+  --clr-primary-100: #e6e5e9;
   --clr-primary-200: #3b4050;
   --clr-primary-400: #222737;
   --clr-secondary-200: #a59678;
@@ -33,12 +33,21 @@ h1,
 h2,
 h3,
 h4,
-button {
+button,
+a {
   font-family: var(--ff-accent);
 }
 
 p {
   font-family: var(--ff-primary-400);
+}
+h1 {
+  color: var(--clr-neutral-100);
+}
+h2,
+h3,
+h4 {
+  color: var(--clr-secondary-200);
 }
 .btn {
   display: inline-block;
@@ -49,6 +58,9 @@ p {
   background-color: var(--clr-secondary-200);
   padding: 0.75em 2em;
   border-radius: 100px;
+  border: none;
+  margin-top: 20px;
+  font-size: 24px;
 }
 
 .btn:hover,
@@ -60,9 +72,7 @@ p {
   padding: 1em 0;
   text-align: center;
 }
-.hero {
-  background-color: var(--clr-primary-200);
-}
+
 .container {
   width: 80%;
   max-width: 1200px;
@@ -148,6 +158,7 @@ p {
 
 .nav__item {
   margin-top: 0.9em;
+  font-size: 18px;
 }
 .nav__link {
   text-decoration: none;
@@ -160,8 +171,8 @@ p {
 }
 
 .nav__link--button {
-  background-color: #fff;
-  color: #136c72;
+  background-color: var(--clr-secondary-200);
+  color: var(--clr-neutral-100);
   padding: 0.15em 1em;
   border-radius: 10em;
 }
@@ -172,6 +183,56 @@ p {
   justify-content: center;
 
   /* come back to this */
+}
+
+.hero {
+  background-color: var(--clr-primary-200);
+  padding: 3rem 0;
+}
+.big__text h1 {
+  font-size: 3.5rem;
+  line-height: 1.2;
+  margin-bottom: 0.8em;
+}
+.small__text p {
+  font-size: 24px;
+}
+.upper {
+  background-color: var(--clr-primary-100);
+  padding: 2.5rem 0;
+}
+.upper h3 {
+  text-transform: capitalize;
+  margin: 1em 0;
+  text-align: center;
+  font-size: 30px;
+}
+.upper p {
+  font-size: 18px;
+}
+
+.lower {
+  padding: 3rem 0;
+}
+.lower h2 {
+  margin-bottom: 1em;
+  font-size: 36px;
+}
+.lower p {
+  font-size: 21px;
+  margin: 1em 0;
+}
+
+.right__col {
+  background-color: var(--clr-primary-200);
+  padding: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: var(--clr-neutral-100);
+}
+.right__col h3 {
+  color: var(--clr-neutral-100);
+  font-size: 30px;
 }
 
 @media (min-width: 800px) {
