media queries first breakpoint added

--- a/style.css
+++ b/style.css
@@ -189,6 +189,7 @@ h4 {
 .hero {
   background-color: var(--clr-primary-200);
   padding: 3rem 0;
+  text-align: center;
 }
 .big__text h1 {
   font-size: 3.5rem;
@@ -243,6 +244,9 @@ h4 {
   background-color: var(--clr-primary-200);
   padding: 2rem 0;
 }
+.footer h1 {
+  text-align: center;
+}
 
 .footer__split {
   margin: 1.5em 0;
@@ -250,6 +254,7 @@ h4 {
 
 .footer__split h1 {
   font-size: 24px;
+  text-align: center;
 }
 
 .footer__split h4 {
@@ -282,7 +287,14 @@ a {
   opacity: 0.75;
 }
 
-@media (min-width: 800px) {
+.footer__about {
+  width: 40%;
+}
+.footer__nav {
+  width: 60%;
+}
+
+@media (min-width: 700px) {
   .nav-toggle {
     display: none;
   }
@@ -293,12 +305,8 @@ a {
     height: auto;
     position: relative;
     align-items: center;
-    justify-content: space-between;
-
-    /*or 
-    
-    justify-content: flex-end
-    */
+    /* justify-content: space-between; */
+    justify-content: flex-end;
   }
   .align {
     align-items: center;
@@ -317,5 +325,21 @@ a {
   .row {
     display: flex;
     justify-content: space-between;
+  }
+}
+@media (min-width: 1000px) {
+  .split {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  .align__text {
+    text-align: center;
+  }
+  .footer__nav {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 50px;
   }
 }
