--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ h4 {
 
 .hero {
   background-color: var(--clr-primary-200);
-  padding: 3rem 0;
+  padding: 4rem 0;
   text-align: center;
 }
 .big__text h1 {
@@ -204,7 +204,7 @@ h4 {
 }
 .upper {
   background-color: var(--clr-primary-100);
-  padding: 2.5rem 0;
+  padding: 3.5rem 0;
 }
 .upper h3 {
   text-transform: capitalize;
@@ -217,10 +217,10 @@ h4 {
 }
 
 .lower {
-  padding: 3rem 0;
+  padding: 4rem 0;
 }
 .lower h2 {
-  margin-bottom: 1em;
+  margin-bottom: 1.2em;
   font-size: 36px;
 }
 .lower p {
@@ -242,10 +242,11 @@ h4 {
 
 .footer {
   background-color: var(--clr-primary-200);
-  padding: 2rem 0;
+  padding: 4rem 0;
 }
 .footer h1 {
   text-align: center;
+  font-size: 45px;
 }
 
 .footer__split {
@@ -287,14 +288,7 @@ a {
   opacity: 0.75;
 }
 
-.footer__about {
-  width: 40%;
-}
-.footer__nav {
-  width: 60%;
-}
-
-@media (min-width: 700px) {
+@media (min-width: 650px) {
   .nav-toggle {
     display: none;
   }
@@ -326,11 +320,14 @@ a {
     display: flex;
     justify-content: space-between;
   }
-}
-@media (min-width: 1000px) {
-  .split {
+  .footer__nav {
     display: flex;
     justify-content: space-between;
+  }
+}
+@media (min-width: 900px) {
+  .split {
+    display: flex;
     gap: 20px;
   }
 
@@ -341,5 +338,33 @@ a {
     display: flex;
     justify-content: space-between;
     margin-left: 50px;
+  }
+  .footer__about {
+    width: 40%;
+  }
+  .footer__nav {
+    width: 60%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .flex {
+    display: flex;
+    justify-content: space-between;
+  }
+  .lower .split {
+    flex-direction: column;
+  }
+  .big__text {
+    width: 50%;
+  }
+  .small__text {
+    width: 40%;
+  }
+  .left {
+    width: 60%;
+  }
+  .right {
+    width: 35%;
   }
 }
