--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ h4 {
 }
 .header {
   background-color: var(--clr-primary-400);
-  padding: 1em 0;
+  padding: 1rem 0;
   text-align: center;
 }
 
@@ -188,7 +188,7 @@ h4 {
 
 .hero {
   background-color: var(--clr-primary-200);
-  padding: 4rem 0;
+  padding: 6rem 0;
   text-align: center;
 }
 .big__text h1 {
@@ -348,6 +348,9 @@ a {
 }
 
 @media (min-width: 1200px) {
+  .header {
+    text-align: left;
+  }
   .flex {
     display: flex;
     justify-content: space-between;
